syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

package blog;

option java_package = "com.grigoryev.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
  google.protobuf.Timestamp created_time = 5;
  google.protobuf.Timestamp updated_time = 6;
}

message SaveBlogRequest {
  string author = 1 [(validate.rules).string = {
    pattern: "^[a-zA-Zа-яА-ЯёЁ]+$",
    min_len: 2,
    max_len: 30,
  }];
  string title = 2 [(validate.rules).string = {min_len: 3, max_len: 255}];
  string content = 3 [(validate.rules).string = {min_len: 3, max_len: 2000}];
}

message BlogResponse {
  Blog blog = 1;
}

message FindByIdBlogRequest {
  string id = 1 [(validate.rules).string.pattern = "^[0-9a-fA-F]{24}$"];
}

message UpdateByIdBlogRequest {
  string id = 1 [(validate.rules).string.pattern = "^[0-9a-fA-F]{24}$"];
  string author = 2 [(validate.rules).string = {
    pattern: "^[a-zA-Zа-яА-ЯёЁ]+$",
    min_len: 2,
    max_len: 30,
  }];
  string title = 3 [(validate.rules).string = {min_len: 3, max_len: 255}];
  string content = 4 [(validate.rules).string = {min_len: 3, max_len: 2000}];
}

message DeleteByIdBlogRequest {
  string id = 1 [(validate.rules).string.pattern = "^[0-9a-fA-F]{24}$"];
}

message DeleteByIdBlogResponse {
  string message = 1;
}

service BlogService {
  rpc save(SaveBlogRequest) returns (BlogResponse) {};
  rpc findById(FindByIdBlogRequest) returns (BlogResponse) {};
  rpc updateById(UpdateByIdBlogRequest) returns (BlogResponse) {};
  rpc deleteById(DeleteByIdBlogRequest) returns (DeleteByIdBlogResponse) {};
  rpc findAll(google.protobuf.Empty) returns (stream BlogResponse) {};
}
